# globook

./: .gitignore  README.md  app.py  environment.yml
globook-backend/: .gitignore  pyproject.toml
globook-backend/app/: __init__.py  configuration.py  models.py  views.py
globook-backend/migrations/versions/: 043fc3dcf441_test.py
globook-frontend/: .gitignore  README.md  index.html  package-lock.json  package.json
globook-frontend/src/: App.vue  main.js
